Added selective cell sampling and changed uart to high speed mode

--- a/firmware/nbproject/Makefile-genesis.properties
+++ b/firmware/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Fri Feb 06 14:42:00 PST 2015
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=904a0e25e75d3978b5f97eec388b42a4
-default.languagetoolchain.dir=/Applications/microchip/xc16/v1.21/bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=1f98a0eed69cb2a45c12981fa9470927
-default.languagetoolchain.version=1.21
+#Tue Mar 31 11:57:42 PDT 2015
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=71d74850f2b9f7513b1a1ccb2192ac5f
+default.languagetoolchain.dir=/Applications/microchip/xc16/v1.24/bin
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6c4dcf44e1ed7eded46cf7c7ad3c6db0
+default.languagetoolchain.version=1.24
 host.platform=mac
 conf.ids=default
